# netops-toolkit

./: .coverage  .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  coverage.xml  index.html  mkdocs.yml  netops_tui.py  objects.inv  pyproject.toml  sitemap.xml
.github/: copilot-setup-steps.yml
.github/workflows/: ci.yml  copilot-pr-lifecycle.yml  docs.yml  release.yml
API/: index.html
ROADMAP/: index.html
api/: index.html
api/ansible/: index.html
api/change/: index.html
api/check/: index.html
api/collect/: index.html
api/core/: index.html
api/inventory/: index.html
api/parsers/: index.html
api/playbooks/: index.html
api/report/: index.html
docs/: API.md  ROADMAP.md  index.md
docs/api/: README.md  ansible.md  change.md  check.md  collect.md  core.md  inventory.md  parsers.md  playbooks.md  report.md
docs/guides/: README.md  auto-inventory.md  brocade.md  cisco-health.md  cli-reference.md  config-collector.md  config-diff.md  getting-started.md  interface-checker.md  inventory-management.md  juniper.md  paloalto.md  scan.md
examples/: inventory.yaml
examples/ansible/: collect_facts.yml  inventory.yaml  run_commands.yml
guides/: index.html
guides/auto-inventory/: index.html
guides/brocade/: index.html
guides/cisco-health/: index.html
guides/cli-reference/: index.html
guides/config-collector/: index.html
guides/config-diff/: index.html
guides/getting-started/: index.html
guides/interface-checker/: index.html
guides/inventory-management/: index.html
guides/juniper/: index.html
guides/paloalto/: index.html
guides/scan/: index.html
netops/: __init__.py
netops/ansible/: __init__.py  dynamic_inventory.py
netops/ansible/modules/: __init__.py  netops_command.py  netops_facts.py
netops/ansible/roles/netops_acl/: README.md
netops/ansible/roles/netops_acl/defaults/: main.yml
netops/ansible/roles/netops_acl/handlers/: main.yml
netops/ansible/roles/netops_acl/meta/: main.yml
netops/ansible/roles/netops_acl/molecule/default/: converge.yml  molecule.yml  verify.yml
netops/ansible/roles/netops_acl/tasks/: main.yml
netops/ansible/roles/netops_backup/: README.md
netops/ansible/roles/netops_backup/defaults/: main.yml
netops/ansible/roles/netops_backup/handlers/: main.yml
netops/ansible/roles/netops_backup/meta/: main.yml
netops/ansible/roles/netops_backup/molecule/default/: converge.yml  molecule.yml  verify.yml
netops/ansible/roles/netops_backup/tasks/: main.yml
netops/ansible/roles/netops_health/: README.md
netops/ansible/roles/netops_health/defaults/: main.yml
netops/ansible/roles/netops_health/handlers/: main.yml
netops/ansible/roles/netops_health/meta/: main.yml
netops/ansible/roles/netops_health/molecule/default/: converge.yml  molecule.yml  verify.yml
netops/ansible/roles/netops_health/tasks/: main.yml
netops/ansible/roles/netops_ntp/: README.md
netops/ansible/roles/netops_ntp/defaults/: main.yml
netops/ansible/roles/netops_ntp/handlers/: main.yml
netops/ansible/roles/netops_ntp/meta/: main.yml
netops/ansible/roles/netops_ntp/molecule/default/: converge.yml  molecule.yml  (+1 more)
netops/ansible/roles/netops_ntp/tasks/: main.yml
netops/ansible/roles/netops_update/: README.md
netops/ansible/roles/netops_update/defaults/: main.yml
netops/ansible/roles/netops_update/handlers/: main.yml
netops/ansible/roles/netops_update/meta/: main.yml
netops/ansible/roles/netops_update/tasks/: main.yml
netops/change/: __init__.py  diff.py  plan.py  push.py  rollback.py
netops/check/: __init__.py  arista.py  bgp.py  cisco.py  health.py  interfaces.py  juniper.py  paloalto.py  vlan.py
netops/collect/: __init__.py  backup.py  config.py
netops/core/: __init__.py  connection.py  inventory.py  vault.py
netops/inventory/: __init__.py  scan.py
netops/parsers/: __init__.py  arista.py  bgp.py  brocade.py  cisco.py  health.py  juniper.py  nokia_sros.py  paloalto.py  vlan.py
netops/playbooks/: __init__.py  generator.py
netops/playbooks/templates/: __init__.py  remediation.py
netops/report/: __init__.py  generator.py  health_dashboard.py  mailer.py  scheduler.py
netops/report/templates/: default.html.j2  health_dashboard.html.j2
netops/templates/: __init__.py  arista_eos.py  brocade.py  cisco_ios.py  junos.py  nokia_sros.py  paloalto.py
search/: search_index.json
tests/: __init__.py  test_ansible.py  test_ansible_roles.py  test_arista_health.py  test_backup.py  test_bgp.py  test_change_diff.py  test_change_plan.py  test_change_push.py  test_change_rollback.py  test_cisco_health.py  test_collect_config.py  test_health.py  test_health_dashboard.py  test_interfaces.py  test_juniper_health.py  test_paloalto_policy.py  test_parsers_brocade.py  test_parsers_nokia.py  test_parsers_paloalto.py  test_playbook_generator.py  test_report.py  test_scan.py  test_templates.py  test_vault.py  test_vlan.py
(+3 files in other folders)
