[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netops-toolkit"
version = "0.31.5"
description = "Modular network automation utilities for telco operations"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "netmiko>=4.3.0",
    "paramiko>=3.4.0",
    "pyyaml>=6.0",
    "cryptography>=46.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]
snmp = [
    "pysnmp>=7.0",
]
ansible = [
    "ansible-core>=2.16",
    "ansible.netcommon>=6.0",
]
report = [
    "jinja2>=3.1.6",
]
report-pdf = [
    "jinja2>=3.1.6",
    "weasyprint>=62.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
netops = ["py.typed"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
disable_error_code = ["type-arg", "import-untyped"]

[tool.ruff]
line-length = 100
target-version = "py310"
