[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netops-toolkit"
version = "0.34.0"
description = "Modular network automation utilities for telco operations"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "netmiko>=4.3.0",
    "paramiko>=3.4.0",
    "pyyaml>=6.0",
    "cryptography>=46.0.5",
    "pygments>=2.0.0,<2.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "pip-audit>=2.7",
    "interrogate>=1.7.0",
]
snmp = [
    "pysnmp>=7.0",
]
ansible = [
    "ansible-core>=2.16",
    "ansible.netcommon>=6.0",
]
report = [
    "jinja2>=3.1.6",
]
report-pdf = [
    "jinja2>=3.1.6",
    "weasyprint>=62.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
netops = ["py.typed"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
disable_error_code = ["type-arg", "import-untyped"]

[tool.pytest.ini_options]
addopts = "--cov=netops --cov-report=term-missing --cov-report=xml --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
source = ["netops"]
omit = ["netops/ansible/modules/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def main\\(",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
fail-under = 90
exclude = ["setup.py", "docs", "build", "tests"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
