[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netops-toolkit"
version = "0.35.6"
description = "Modular network automation utilities for telco operations"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "netmiko>=4.3.0,<4.5.0",
    "paramiko>=3.4.0",
    "pyyaml>=6.0",
    "cryptography>=46.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "pip-audit>=2.7",
]
snmp = [
    "pysnmp>=7.0",
]
ansible = [
    "ansible-core>=2.16",
    "ansible.netcommon>=6.0",
]
report = [
    "jinja2>=3.1.6",
]
report-pdf = [
    "jinja2>=3.1.6",
    "weasyprint>=62.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.25",
    "mkdocs-autorefs>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
netops = ["py.typed"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_explicit = true
warn_return_any = true
warn_unused_ignores = true
disable_error_code = ["type-arg", "import-untyped"]

[tool.pytest.ini_options]
addopts = "--cov=netops --cov-report=term-missing --cov-report=xml --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
source = ["netops"]
omit = ["netops/ansible/modules/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def main\\(",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP", "W"]
ignore = ["D107", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
